replace id to external_id into API queries
